Mobile deploy had issue with layout. Seeing if overflow was the issue.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 #root{
   box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body, html {
